# dynaconf-example

./: .gitignore  README.md  config.py  main.py  pyproject.toml  settings.toml
