[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Matheus Feu  <101346300+Havokzbr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
